[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
thiserror = "1"
# tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.package]
authors = ["Justin Rubek"]
edition = "2021"
homepage = "https://github.com/justinrubek/templates"
license = "MIT"
repository = "https://github.com/justinrubek/templates"
version = "0.1.0"

[profile.release]
# opt-level = 2 # fast and small wasm
