[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workpace = true
clap = { version = "4.0.19", features = ["derive"] }
# serde.workpace = true
# serde_json.workpace = true
tokio = { workpace = true, features = ["full"] }
thiserror.workpace = true
tracing.workpace = true
tracing-subscriber = "0.3.16"
